WebApp bugv8 (except point 4)

--- a/app/views/Tools/confirm.scala.html
+++ b/app/views/Tools/confirm.scala.html
@@ -35,6 +35,7 @@
     *@
     <script src="@routes.Assets.at("js/global_no_coffee.js")"></script>
     <script src="@routes.Assets.at("bl/js/jquery.tokeninput.js")"></script>
+    <script src="@routes.Assets.at("bl/js/knockout-bootstrap.min.js")"></script>
     <link href="@routes.Assets.at("bl/css/fonts/fonts.css")" rel="stylesheet" type="text/css">
     
     <link href="@routes.Assets.at("css/bootstrap.css")" media="screen" rel="stylesheet" />
@@ -146,9 +147,14 @@
 				</div>
 				
 				<div >
-				  <label class="control-label"  for="labels">Tags:</label>
+				  <label class="control-label"  for="labels">Labels :</label>
 				  <div >
 					<input name="labels" id="labels"/>
+				  </div>
+				  <div >
+					<a data-bind="popover: {template: 'addTagTemplate', placement:'bottom'}" >
+					 <i class="icon-share"></i>Add New Tag
+					</a>
 				  </div>
 				</div>
 				
@@ -186,13 +192,38 @@
   
 
 	
-  
+  <script type="text/html" id="addTagTemplate">
+ 	 <button class="close-tag-popover close pull-right" type="button" data-dismiss="popover">×</button>
+	 
+	 <label class="control-label"  for="tags">Enter Tag :</label>
+	 <div class="controls">
+		<input name="tags" id="tags"/>
+		<a id="add-tag" href="#">Add</a>
+	 </div>
+
+	 
+  </script>
   
   @Templates.su.jready{
   
   $('#labels').tokenInput("/tags/all", {
                 preventDuplicates: true
-            });
+   });
+   
+   $('body').on('click','#add-tag',function(){
+   		$.ajax({
+   			url:"/tags/add",
+   			type:"PUT",
+   			dataType: 'json',
+   			data:{'tags' : $('#tags').val()},
+   			success: function(data){
+   			console.log(data[0]);
+   				$("#labels").tokenInput("add", {id:data[0].id,name:data[0].name});
+   				$(".close-tag-popover").click();
+   			}
+   		});
+   		
+   });
   
   @Html(play.Routes.javascriptRouter("categoryloader",controllers.routes.javascript.Application.RetrieveCategoryList));
   
