--- a/app/views/Tools/confirm.scala.html
+++ b/app/views/Tools/confirm.scala.html
@@ -150,7 +150,7 @@
 				</div>
 				
 				<div >
-				  <label class="control-label"  for="labels">Labels :</label>
+				  <label class="control-label"  for="labels">Tags:</label>
 				  <div >
 					<input name="labels" id="labels"/>
 				  </div>
