--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -96,7 +96,7 @@
             <!-- End post-image -->
             
             <!-- Begin post-excerpt -->
-            <div class="post-excerpt" style="height: 500px;overflow: hidden;">
+            <div class="post-excerpt" style="height: 500px;overflow: hidden;text-align:justify">
               @Html(blg.content)
             </div>
            <!--  <a href="javascript:void(0);" class="readmore-js-toggle">Read More</a> -->
