--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -531,12 +531,19 @@ width:70px;height:70px;vertical-align: baseline!important;
 					);
 				}
 				self.loadinitcatg();
-				
+				self.stillloading = false;
 				var $containerShopList;
 				self.loadProd = function(jsonstring) {			
-					ldiv.display();
+					
 					var sentsuccess=true;
+					
+					if(self.stillloading) {
+						return;
+					}
+					
 					var posting = $.post( "@routes.Application.ProductQuery",jsonstring,"json");
+					ldiv.display();
+					self.stillloading = true;
 					
 					posting.done(function( data ) {	
 						$prodselect=data['prodgrid'];
@@ -588,12 +595,13 @@ width:70px;height:70px;vertical-align: baseline!important;
 								}
 							});	
 						}
-						
+						self.stillloading = false;
 						if(!data['hasmore']){self.fr.page=-1;}		
 					});
 					posting.fail(function( data ) {
 						ldiv.loadcomplete();	
 						sentsuccess=false;
+						self.stillloading = false;
 					});
 					
 					return sentsuccess;						       
