--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -28,13 +28,13 @@ width:70px;height:70px;vertical-align: baseline!important;
 
 
 @Templates.MasterTemplate(){
-	@Templates.pagehead(" Boozology"){@ps}
+	@Templates.pagehead(" Boozology - Discover, learn and talk about drinks "){@ps}
 }{
 	@Templates.pageheader(){		
 				
 	}{
 	
-	
+			
 	@*	<div class="navbar navbar-inverse spacecreater-vertical-small">
 		  <div class="navbar-inner brectangle">
 		  	<div class="container tabs">
