--- a/app/views/Admin/ViewWallpapers.scala.html
+++ b/app/views/Admin/ViewWallpapers.scala.html
@@ -59,12 +59,27 @@
 					<div id="fileinformation"  class="borderinvisible span4" style="display:none;margin:0;'"></div>					  
 				</div>  
 				
-			<div class="form-group">	
-			  <label class="col-sm-1 control-label"  for="username">URL:</label>	
-			<div class="col-sm-8">
-						<input type="text" id="wallpaper-url" name="wallpaper-url" class="form-control" placeholder="">
-			</div>
-			</div>	
+				<div class="form-group">	
+					  <label class="col-sm-1 control-label"  for="wallpaper-url">URL:</label>	
+					<div class="col-sm-8">
+								<input type="text" id="wallpaper-url" name="wallpaper-url" class="form-control" placeholder="">
+					</div>
+					
+				</div>	
+					<div  class="form-group">
+					  <label class="col-sm-1 control-label"  for="buttontext">Button text:</label>	
+					<div class="col-sm-8">
+								<input type="text" id="buttontext" name="buttontext" class="form-control" placeholder="">
+					</div>	
+					</div>	
+					<div  class="form-group">
+					  <label class="col-sm-1 control-label"  for="buttonstyle">Button style:</label>	
+					<div class="col-sm-8">
+								<input type="text" id="buttonstyle" name="buttonstyle" class="form-control" placeholder="">
+					</div>
+					</div>	
+					
+
 				
 			</div>
 		}
